--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -61,18 +66,16 @@ jobs:
 
     - name: Upload Allure results (Raw data)
       if: always()
-      # Upload the raw data just in case you need to re-generate the report locally later.
       uses: actions/upload-artifact@v4
       with:
-          name: allure-raw-results
-          path: ./allure-results
-          retention-days: 7
+        name: allure-raw-results
+        path: ./allure-results
+        retention-days: 7
 
-    - name: Upload Allure HTML Report (Viewable)
+    - name: Deploy Allure Report to GitHub Pages
       if: always()
-      # Upload the fully generated HTML report so it can be downloaded and opened.
-      uses: actions/upload-artifact@v4
+      uses: peaceiris/actions-gh-pages@v3
       with:
-          name: allure-html-report
-          path: ./allure-report
-          retention-days: 7
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./allure-report
+        publish_branch: gh-pages  # This branch will host the report
