--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -59,9 +59,12 @@ jobs:
       run: npx playwright install --with-deps
 
     - name: Run Playwright tests
+      if: always()
+      continue-on-error: true
       run: npx playwright test --reporter=line,allure-playwright
 
     - name: Generate Allure report
+      if: always()
       run: npx allure generate ./allure-results --clean -o ./allure-report
 
     - name: Upload Allure results (Raw data)
